--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,6 @@ on:
     - cron: "* * * * *"
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -48,13 +45,13 @@ jobs:
         NOTIFY_SOLUTION: ${{ secrets.NOTIFY_SOLUTION }}
         NOTIFY_SOLUTION_FAILED: ${{ secrets.NOTIFY_SOLUTION_FAILED }}
 
-    - name: Git as GitHub Actions Bot
-      uses: Lucky3028/git-as-gha@v1.0.0
-
     - name: Commit
       shell: sh
       run: |
         set -eu
+        
+        git config user.email "45379733+qhy040404@users.noreply.github.com"
+        git config user.name "qhy040404"
         
         git add .
         
@@ -62,4 +59,8 @@ jobs:
             git commit -m "Pause workflow"
         fi
         
-        git push
+    - name: Push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        branch: ${{ github.ref }}
