--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,5 +62,5 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@v0.6.0
       with:
-        github_token: ${{ secrets.TOKEN }}
+        github_token: ${{ secrets.PUSH_TOKEN }}
         branch: ${{ github.ref }}
