--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3.0.2
+      with:
+        token: ${{ secrets.SCORECHECKER_WORKFLOW_TOKEN }}
 
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
